# SkillCheck

./: .gitignore  README.md
Frontend_PC/: CMakeLists.txt  auth.cpp  auth_window.cpp  auth_window.h  authentication_window.cpp  authentication_window.h  main.cpp  register_form.cpp  register_form.h  register_window.cpp  register_window.h
